# AI-Job-Hunter-Pro

./: .gitignore  CLOUD_READY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  README.md  deploy.py  health_check.py  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
config/: config.yaml
data/: sample_jobs.json
resumes/: sample_resume.txt
src/ai_job_hunter_pro/: __init__.py  main.py
src/ai_job_hunter_pro/adapters/: __init__.py  ai_matcher.py  email_sender.py  json_collector.py  portal_collectors.py  resume_parsers.py  rss_collector.py  sqldb.py
src/ai_job_hunter_pro/config/: __init__.py  loader.py  settings.py
src/ai_job_hunter_pro/domain/: __init__.py  entities.py  ports.py
src/ai_job_hunter_pro/plugins/: __init__.py
src/ai_job_hunter_pro/ui/: streamlit_app.py
src/ai_job_hunter_pro/ui/templates/: report.html.j2
src/ai_job_hunter_pro/use_cases/: __init__.py  collect_jobs.py  email_summary.py  email_with_attachment.py  filter_jobs.py  match_jobs.py  parse_resumes.py  reporting.py
tests/: test_config_loader.py  test_filter_jobs.py
