[project]
name = "ai-job-hunter-pro"
version = "0.1.0"
description = "A clean-architecture Python application for AI-driven job discovery, resume matching, and daily reporting."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "AI Job Hunter Pro", email = "noreply@example.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Framework :: Streamlit",
]
dependencies = [
  "pydantic>=2.5.2",
  "pydantic-settings>=2.0",
  "typer>=0.10.0",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "openai>=1.0",
  "pdfplumber>=0.9.0",
  "python-docx>=0.9.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "jinja2>=3.1.0",
  "streamlit>=1.30.0",
  "feedparser>=6.0.0"
]
[project.scripts]
ai-job-hunter-pro = "ai_job_hunter_pro.main:app"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --disable-warnings --strict-markers"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
